<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.4"
        android:orientation="vertical" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/popup_shape"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            style="@style/SegoeUISemiBold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:width="194dp"
            android:height="30dp"
            android:gravity="center"
            android:lineSpacingMultiplier="1.08"
            android:text="@string/addphoto"
            android:textColor="@color/grey"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/take_photo"
            style="@style/SegoeUISemiBold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:lineSpacingMultiplier="1.20"
            android:paddingTop="5dp"
            android:paddingBottom="10dp"
            android:text="@string/takephoto"
            android:textColor="@color/colorAccent"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/gallery"
            style="@style/SegoeUISemiBold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:lineSpacingMultiplier="1.20"
            android:paddingTop="5dp"
            android:paddingBottom="10dp"
            android:text="@string/choosefrmlibrary"
            android:textColor="@color/colorAccent"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/Cancel"
            style="@style/SegoeUISemiBold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:lineSpacingMultiplier="1.20"
            android:paddingTop="5dp"
            android:paddingBottom="10dp"
            android:text="@string/cancel"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>