<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1.5">

        <ImageView
            android:id="@+id/iv_cross"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:adjustViewBounds="true"
            android:contentDescription="@string/app_name"
            app:srcCompat="@drawable/cross_button" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:weightSum="1.5">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/enter_mphos"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_weight="0.5"
                android:background="@drawable/grey_oval"
                android:gravity="center"
                android:padding="7dp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/UPIReference"
                    style="@style/SegoeUI"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/textboxshape"
                    android:gravity="center"
                    android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890"
                    android:hint="xxxx-xxxx-xxxx"
                    android:inputType="textFilter"
                    android:maxLength="10"
                    android:singleLine="true" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="20dp"
            android:baselineAligned="false"
            android:gravity="end"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/enter_amntrcv"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@drawable/grey_oval"
                android:gravity="center"
                android:padding="6dp">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="15dp"
                    android:contentDescription="@string/app_name"
                    android:tint="@color/Black"
                    app:srcCompat="@drawable/ic_rupee_indian" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/UPIAmount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/textboxshape"
                    android:gravity="center"
                    android:hint="@string/enter_amnt"
                    android:maxLength="10"
                    android:inputType="numberDecimal" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</layout>