<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_grey"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar_arrow_signpaid" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/toolbar"
            android:orientation="vertical"
            android:weightSum="1">

            <TextView

                android:id="@+id/assignmentid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/Sign_here"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginTop="10dp"
                android:layout_weight=".8"
                android:background="@color/white"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/proLer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:background="@color/white"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ProgressBar
                        android:id="@+id/pro_related_item"
                        style="?android:attr/progressBarStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:visibility="gone" />
                </LinearLayout>

                <com.github.gcacace.signaturepad.views.SignaturePad
                    android:id="@+id/signaturePad"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="5dp"
                android:layout_weight=".2"
                android:background="@color/white"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="2">

                <Button
                    android:id="@+id/saveButton"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="@dimen/view_margin_10"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/drawable_corner_green"
                    android:gravity="center"
                    android:paddingLeft="10dp"
                    android:paddingTop="8dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="8dp"
                    android:text="@string/save"
                    android:textColor="@color/colorPrimary" />

                <Button
                    android:id="@+id/clearButton"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="@dimen/view_margin_10"
                    android:layout_marginLeft="10dp"
                    android:layout_marginEnd="@dimen/view_margin_10"
                    android:layout_weight="1"
                    android:background="@drawable/diable_view"
                    android:text="@string/clear"
                    android:textColor="@color/white" />
            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>


</layout>