<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ic_splace_logo_bg"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1.5"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_rkhata_logo" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.2">

                <in.moreyeahs.livspace.delivery.font.TextViewSFRegular
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Verifying_your_number"
                    android:textColor="#373737"
                    android:textSize="13sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/pading_bottom_5"
               >

                <TextView
                    style="@style/CommanStyleSF"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/We_have_sent_an_OTP"
                    android:textColor="#373737"
                    android:textSize="13sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.2"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="+91-"
                    android:textColor="@color/Black"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_oldnumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="9525154608"
                    android:textColor="@color/Black"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="center"
               >

                <in.moreyeahs.livspace.delivery.font.TextViewOpensansBold
                    android:id="@+id/btn_chngnumber"
                    android:layout_width="150dp"
                    android:layout_height="30dp"
                    android:gravity="center"
                    android:text="@string/ChangeNumber"
                    android:textColor="@color/black"
                    android:textSize="13sp" />
            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="302dp"
                android:layout_height="59dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:elevation="10dp"
                app:cardCornerRadius="25dp"
                card_view:cardElevation="10dp">

                <LinearLayout
                    android:layout_width="302dp"
                    android:layout_height="59dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <ImageView
                        android:layout_width="14dp"
                        android:layout_height="25dp"
                        android:layout_marginLeft="@dimen/font_size_20"
                        android:background="@drawable/ic_mob_icon"/>

                    <in.moreyeahs.livspace.delivery.font.EditTextOpensansRegular
                        android:id="@+id/otp"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:background="@drawable/textboxshape"
                        android:layout_marginStart="10dp"
                        android:textSize="13sp"
                        android:hint="@string/ENETROTP"
                        android:inputType="number"
                         />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <in.moreyeahs.livspace.delivery.font.TextViewSFRegular
                    android:id="@+id/resendotp"
                    style="@style/CommanStyleSF"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/resendotp"
                    android:textColor="#373737"
                    android:textSize="13sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/pading_bottom_10"
                android:layout_marginBottom="@dimen/pading_bottom_10"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/resend_otp_timer"
                    style="@style/CommanStyleSF"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="30 Seconds"
                    android:textAllCaps="true"
                    android:textColor="@color/colorAccent"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
               android:gravity="center_horizontal"
                android:layout_weight="0.9"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:autoLink="phone"
                    android:gravity="center"
                    android:text="Didn't get the OTP Contact us  +(91) 7828112112"
                    android:textSize="12sp" />
                <ImageView
                    android:id="@+id/verify_otp"
                    android:layout_width="120dp"
                    android:layout_height="100dp"
                    android:src="@drawable/next" />

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>


</layout>